--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/IMG_20210830_232842 (1).jpg" alt="Muhammad Rafli" width="170" class="rounded-circle img-thumbnail" />
+      <img src="img/img_1.jpg" alt="Muhammad Rafli" width="170" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Rafli</h1>
       <p class="lead">IT Development Website & Android | Front End Developer |</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
