--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <div class="col-md-4">
             <p>
               Nama saya Muhammad Rafli, saya lulusan di Universitas Bina Sarana Informatika (UBSI) tahun 2021 Jurusan Teknik Informatika. Saya memiliki kemampuan dalam bidang Programming sebagai Front End Developer, Saya memegang PHP Admin
-              beberapa Website project yang saya kerjakan. Kemudian saya mendalami tentang bootstrap5, Laravel, PHP Natiive, dan lain sebagainya. Basic saya ada pada pembuatan developer Android, yang saya sudah menguasai beberapa bahasa
-              yaitu Java & Kotlinnya itu sendiri.
+              untuk beberapa Website project yang saya kerjakan. Kemudian saya mendalami framework yang sedang sering digunakan pada dunia programming, yaitu: bootstrap5, Laravel, PHP Natiive, dan lain sebagainya. Basic saya ada pada
+              pembuatan developer Android, yang saya sudah menguasai beberapa bahasa yaitu Java & Kotlinnya itu sendiri.
             </p>
           </div>
           <div class="col-md-4">
