--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <img src="img/Projects/survey.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
                 <p class="card-text">
-                  Kemudian, saya memiliki project ke-3 saya dari salah satu PT Retail ternama dengan project untuk Menyensus toko toko retail dan membantu memberikan banyak promo dan barang untuk di perjual belikan, yaitu Census Online.
+                  Kemudian, saya memiliki project ke-3 saya dari salah satu PT Retail ternama dengan project untuk Menyensus toko-toko retail dan membantu memberikan banyak promo dan barang untuk di perjual belikan, yaitu Census Online.
                   Pada project kali ini saya berperan pada Front End Developer pada framework PHP My Admin untuk Website dan Juga aplikasi pada Androidnya itu sendiri.
                 </p>
               </div>
@@ -148,9 +148,9 @@
               <img src="img/Projects/Taco.jpg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
                 <p class="card-text">
-                  Kemudian pada project ke-5 saya ini, hampir sama dengan Online Census pada project ke 3 saya, tetapi pembedanya adalah ini adalah mystery shopper, dengan mengetahui data data client untuk Vinyl dan SPC Nasional se
-                  Indonesia. Untuk penggunaannya sampa seperti census online, yaitu website berbasis API Laravel, dan beberapa framework PHP, Javascript, dan lain sebagainya. Untuk project ini bernama "TACO" memiliki basis android untuk
-                  para team field melakukan riset mystery shopper.
+                  Kemudian pada project ke-5 saya ini, hampir sama dengan Online Census pada project ke 3 saya, tetapi perbedaannya ini merupakan project "Mystery Shopper", dengan mengetahui data data client untuk Vinyl dan SPC Nasional se
+                  Indonesia tanpa sepengetahuan oleh pemilik toko ataupun yang bekerja pada toko yang sedang di audit atau di riset. Untuk penggunaannya sampa seperti census online, yaitu website berbasis API Laravel, dan beberapa framework
+                  PHP, Javascript, dan lain sebagainya. Untuk project ini bernama "TACO" memiliki basis android untuk para team field melakukan riset mystery shopper.
                 </p>
               </div>
             </div>
